--- a/Html/index.html
+++ b/Html/index.html
@@ -8,9 +8,36 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="header"></div>
+    <div class="header">
+      <nav class="navbar sticky-top navbar-expand-lg navbar-dark first">
+        <a class="navbar-brand" href="#">LOGO</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse second" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Ideas</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Features</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
     <div class="img1"></div>
-    <div class="img2"></div>
+    <div class="img2">
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+    </div>
     <div class="img3"></div>
     <div class="img4"></div>
     <div class="img5"></div>
