--- a/Html/index.html
+++ b/Html/index.html
@@ -60,7 +60,7 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime odit
             reprehenderit rem omnis dolorem quod, dignissimos animi sequi
             inventore repellat soluta facilis fuga impedit quasi modi,
-            doloribus, earum quis? Doloribus.
+            doloribus, earum quis?
           </p>
         </span>
       </div>
