--- a/Html/index.html
+++ b/Html/index.html
@@ -66,7 +66,9 @@
       </div>
     </div>
     <div class="img2">
-      <div class="card"></div>
+      <div class="card">
+        <h3>Residential</h3>
+      </div>
       <div class="card"></div>
       <div class="card"></div>
     </div>
