--- a/Html/index.html
+++ b/Html/index.html
@@ -47,7 +47,7 @@
         </div>
       </nav>
     </div>
-    <div class="img1">
+    <div class="img1 imgage-fluid">
       <div class="text1">
         <span class="textleft"
           ><h1>
