--- a/Html/index.html
+++ b/Html/index.html
@@ -62,47 +62,84 @@
             inventore repellat soluta facilis fuga impedit quasi modi,
             doloribus, earum quis?
           </p>
+          <h4>Image by Freepik</h4>
+          <button class="btn">Learn More</button>
         </span>
       </div>
     </div>
-    
+
     <div class="img2">
       <div class="card">
         <div class="box">
           <div class="circle">
-            <svg xmlns="http://www.w3.org/2000/svg"  fill="white" class="bi bi-house-door-fill" viewBox="0 0 16 16">
-              <path d="M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5Z"/>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="white"
+              class="bi bi-house-door-fill"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5Z"
+              />
             </svg>
           </div>
         </div>
         <h4 class="display-5">Residential</h4>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum ab unde a sed, optio atque id veniam doloremque reiciendis odit mollitia consequatur</p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum ab unde
+          a sed, optio atque id veniam doloremque reiciendis odit mollitia
+          consequatur
+        </p>
       </div>
       <div class="card">
         <div class="box">
           <div class="circle">
-            <svg xmlns="http://www.w3.org/2000/svg"  fill="white" class="bi bi-house-door-fill" viewBox="0 0 16 16">
-              <path d="M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5Z"/>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="white"
+              class="bi bi-house-door-fill"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5Z"
+              />
             </svg>
           </div>
         </div>
         <h4 class="display-5">Show Homes</h4>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum ab unde a sed, optio atque id veniam doloremque reiciendis odit mollitia consequatur</p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum ab unde
+          a sed, optio atque id veniam doloremque reiciendis odit mollitia
+          consequatur
+        </p>
       </div>
       <div class="card">
         <div class="box">
           <div class="circle">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="white" class="bi bi-buildings" viewBox="0 0 16 16">
-              <path d="M14.763.075A.5.5 0 0 1 15 .5v15a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5V14h-1v1.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V10a.5.5 0 0 1 .342-.474L6 7.64V4.5a.5.5 0 0 1 .276-.447l8-4a.5.5 0 0 1 .487.022ZM6 8.694 1 10.36V15h5V8.694ZM7 15h2v-1.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 .5.5V15h2V1.309l-7 3.5V15Z"/>
-              <path d="M2 11h1v1H2v-1Zm2 0h1v1H4v-1Zm-2 2h1v1H2v-1Zm2 0h1v1H4v-1Zm4-4h1v1H8V9Zm2 0h1v1h-1V9Zm-2 2h1v1H8v-1Zm2 0h1v1h-1v-1Zm2-2h1v1h-1V9Zm0 2h1v1h-1v-1ZM8 7h1v1H8V7Zm2 0h1v1h-1V7Zm2 0h1v1h-1V7ZM8 5h1v1H8V5Zm2 0h1v1h-1V5Zm2 0h1v1h-1V5Zm0-2h1v1h-1V3Z"/>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="white"
+              class="bi bi-buildings"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M14.763.075A.5.5 0 0 1 15 .5v15a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5V14h-1v1.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V10a.5.5 0 0 1 .342-.474L6 7.64V4.5a.5.5 0 0 1 .276-.447l8-4a.5.5 0 0 1 .487.022ZM6 8.694 1 10.36V15h5V8.694ZM7 15h2v-1.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 .5.5V15h2V1.309l-7 3.5V15Z"
+              />
+              <path
+                d="M2 11h1v1H2v-1Zm2 0h1v1H4v-1Zm-2 2h1v1H2v-1Zm2 0h1v1H4v-1Zm4-4h1v1H8V9Zm2 0h1v1h-1V9Zm-2 2h1v1H8v-1Zm2 0h1v1h-1v-1Zm2-2h1v1h-1V9Zm0 2h1v1h-1v-1ZM8 7h1v1H8V7Zm2 0h1v1h-1V7Zm2 0h1v1h-1V7ZM8 5h1v1H8V5Zm2 0h1v1h-1V5Zm2 0h1v1h-1V5Zm0-2h1v1h-1V3Z"
+              />
             </svg>
           </div>
         </div>
         <h4 class="display-5">Commercial</h4>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum ab unde a sed, optio atque id veniam doloremque reiciendis odit mollitia consequatur</p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum ab unde
+          a sed, optio atque id veniam doloremque reiciendis odit mollitia
+          consequatur
+        </p>
       </div>
     </div>
-  
+
     <div class="img3"></div>
     <div class="img4"></div>
     <div class="img5"></div>
