--- a/Html/index.html
+++ b/Html/index.html
@@ -49,13 +49,13 @@
     </div>
     <div class="img1 imgage-fluid">
       <div class="text1">
-        <span class="textleft"
-          ><h1>
+        <div class="textleft">
+          <h1>
             Luxury Interior <br />
             Design Studio
-          </h1></span
-        >
-        <span class="textright">
+          </h1>
+        </div>
+        <div class="textright">
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime odit
             reprehenderit rem omnis dolorem quod, dignissimos animi sequi
@@ -64,7 +64,7 @@
           </p>
           <h4>Image by Freepik</h4>
           <button class="btn">Learn More</button>
-        </span>
+        </div>
       </div>
     </div>
 
@@ -94,8 +94,15 @@
       <div class="card">
         <div class="box">
           <div class="circle">
-            <svg xmlns="http://www.w3.org/2000/svg"  fill="white" class="bi bi-house-door-fill" viewBox="0 0 16 16">
-              <path d="M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5Z"/>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="white"
+              class="bi bi-house-door-fill"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5Z"
+              />
             </svg>
           </div>
         </div>
@@ -132,9 +139,54 @@
         </p>
       </div>
     </div>
-
     <div class="img3"></div>
-    <div class="img4"></div>
+    <div class="img4">
+      <h1>Elegant and High-Quality Interiors</h1>
+      <div class="container">
+        <div class="row">
+          <div class="col-6 cards">
+            <div class="cards1">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
+                enim quis voluptates dolores atque earum soluta eveniet ratione,
+                iure minus tempore molestiae dicta quae odit maiores explicabo
+                incidunt quisquam? Nihil!
+              </p>
+            </div>
+          </div>
+          <div class="col-6 cards">
+            <div class="cards1">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
+                enim quis voluptates dolores atque earum soluta eveniet ratione,
+                iure minus tempore molestiae dicta quae odit maiores explicabo
+                incidunt quisquam? Nihil!
+              </p>
+            </div>
+          </div>
+          <div class="col-6 cards">
+            <div class="cards1">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
+                enim quis voluptates dolores atque earum soluta eveniet ratione,
+                iure minus tempore molestiae dicta quae odit maiores explicabo
+                incidunt quisquam? Nihil!
+              </p>
+            </div>
+          </div>
+          <div class="col-6 cards">
+            <div class="cards1">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
+                enim quis voluptates dolores atque earum soluta eveniet ratione,
+                iure minus tempore molestiae dicta quae odit maiores explicabo
+                incidunt quisquam? Nihil!
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="img5"></div>
     <div class="img6"></div>
     <div class="img7"></div>
