--- a/Html/index.html
+++ b/Html/index.html
@@ -133,7 +133,19 @@
       </div>
     </div>
 
-    <div class="img3"></div>
+    <div class="img3">
+      <div class="outer">
+        <div class="card1">
+          <div class="image"></div>
+        </div>
+        <div class="card2">
+          <div class="text">
+            <h3 class="display-4">Cozy Studio Apartment</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab quisquam suscipit nobis, fugit molestias ex enim iure vitae, quibusdam quam modi maiores animi iusto consequuntur quia saepe vel, esse a?</p>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="img4"></div>
     <div class="img5"></div>
     <div class="img6"></div>
