--- a/Html/index.html
+++ b/Html/index.html
@@ -149,15 +149,66 @@
           <div class="card2">
             <div class="text">
               <h3 class="display-4">Cozy Studio Apartment</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab quisquam suscipit nobis, fugit molestias ex enim iure vitae, quibusdam quam modi maiores animi iusto consequuntur quia saepe vel, esse a?</p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab
+                quisquam suscipit nobis, fugit molestias ex enim iure vitae,
+                quibusdam quam modi maiores animi iusto consequuntur quia saepe
+                vel, esse a?
+              </p>
               <p>Image from freep</p>
               <button>LEARN MORE</button>
             </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="img4">
+      <h1>Elegant and High-Quality Interiors</h1>
+      <div class="container">
+        <div class="row">
+          <div class="col-6 cards">
+            <div class="cards1">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
+                enim quis voluptates dolores atque earum soluta eveniet ratione,
+                iure minus tempore molestiae dicta quae odit maiores explicabo
+                incidunt quisquam? Nihil!
+              </p>
             </div>
+          </div>
+          <div class="col-6 cards">
+            <div class="cards1">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
+                enim quis voluptates dolores atque earum soluta eveniet ratione,
+                iure minus tempore molestiae dicta quae odit maiores explicabo
+                incidunt quisquam? Nihil!
+              </p>
             </div>
+          </div>
+          <div class="col-6 cards">
+            <div class="cards1">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
+                enim quis voluptates dolores atque earum soluta eveniet ratione,
+                iure minus tempore molestiae dicta quae odit maiores explicabo
+                incidunt quisquam? Nihil!
+              </p>
             </div>
+          </div>
+          <div class="col-6 cards">
+            <div class="cards1">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
+                enim quis voluptates dolores atque earum soluta eveniet ratione,
+                iure minus tempore molestiae dicta quae odit maiores explicabo
+                incidunt quisquam? Nihil!
+              </p>
             </div>
-    <div class="img4"></div>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="img5"></div>
     <div class="img6"></div>
     <div class="img7"></div>
