--- a/Html/index.html
+++ b/Html/index.html
@@ -210,7 +210,7 @@
       </div>
     </div>
     <div class="img5"></div>
-    <div class="img6"></div>
+    <div class="img6">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta ex sequi natus debitis mollitia vero dolores earum odit optio corporis dicta, nobis aperiam nam quia, deleniti est eum fugiat molestias!</div>
     <div class="img7"></div>
     <div class="img8"></div>
     <div class="footer"></div>
