--- a/Html/index.html
+++ b/Html/index.html
@@ -209,7 +209,14 @@
         </div>
       </div>
     </div>
-    <div class="img5"></div>
+    <div class="img5">
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
+        molestias reprehenderit earum consequuntur voluptates modi. Quam maxime
+        perferendis eaque. Dolore sequi eius consequatur! Veniam aperiam
+        doloribus voluptas, obcaecati assumenda dolores!
+      </p>
+    </div>
     <div class="img6"></div>
     <div class="img7"></div>
     <div class="img8"></div>
