--- a/Html/index.html
+++ b/Html/index.html
@@ -156,7 +156,7 @@
                 vel, esse a?
               </p>
               <p>Image from freep</p>
-              <button>LEARN MORE</button>
+              <button class="btn">Learn More</button>
             </div>
           </div>
         </div>
