--- a/Html/index.html
+++ b/Html/index.html
@@ -166,7 +166,7 @@
       <h1>Elegant and High-Quality Interiors</h1>
       <div class="container">
         <div class="row">
-          <div class="col-6 cards">
+          <div class="col-md-6 cards">
             <div class="cards1">
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
@@ -176,7 +176,7 @@
               </p>
             </div>
           </div>
-          <div class="col-6 cards">
+          <div class="col-md-6 cards">
             <div class="cards1">
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
@@ -186,7 +186,7 @@
               </p>
             </div>
           </div>
-          <div class="col-6 cards">
+          <div class="col-md-6 cards">
             <div class="cards1">
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
@@ -196,7 +196,7 @@
               </p>
             </div>
           </div>
-          <div class="col-6 cards">
+          <div class="col-md-6 cards">
             <div class="cards1">
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
