--- a/Html/index.html
+++ b/Html/index.html
@@ -47,7 +47,7 @@
         </div>
       </nav>
     </div>
-    <div class="img1 imgage-fluid">
+    <div class="img1 imagae-fluid">
       <div class="text1">
         <div class="textleft">
           <h1>
@@ -210,7 +210,19 @@
       </div>
     </div>
     <div class="img5"></div>
-    <div class="img6"></div>
+    <div class="img6">
+      <div class="outer">
+        <div class="first1">
+          <img src="../Images/vibrant1.webp" alt="">
+          <div class="sanika"></div>
+        </div>
+        
+        <div class="white">
+          <div class="whitei"></div>
+        </div>
+        
+      </div>
+    </div>
     <div class="img7"></div>
     <div class="img8"></div>
     <div class="footer"></div>
