--- a/Html/index.html
+++ b/Html/index.html
@@ -209,18 +209,34 @@
         </div>
       </div>
     </div>
-    <div class="img5"></div>
+    <div class="img5">
+      <div class="decidea">
+        <h1>Decorating Ideas</h1>
+        <p>Image by Freepik</p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit dolor
+          recusandae, ullam non in! Consequatur accusamus harum maxime tempora
+          earum at dolorum magnam repellendus, quas quo Lorem ipsum dolor sit
+          amet consectetur adipisicing elit. Quisquam nesciunt nam numquam
+          deleniti?
+        </p>
+        <button class="btn">LEARN MORE</button>
+      </div>
+      <img class="img1" src="../Images/decorating1.jpg" alt="chair" />
+      <img class="img2" src="../Images/decorating2.jpg" alt="chair" />
+      <!-- <img class="img3" src="../Images/decorating3.jpg" alt="" /> -->
+      <!-- <img class="img4" src="../Images/di3.jpg" alt="" /> -->
+    </div>
     <div class="img6">
       <div class="outer">
         <div class="first1">
-          <img src="../Images/vibrant1.webp" alt="">
+          <img src="../Images/vibrant1.webp" alt="" />
           <div class="sanika"></div>
         </div>
-        
+
         <div class="white">
           <div class="whitei"></div>
         </div>
-        
       </div>
     </div>
     <div class="img7"></div>
