--- a/Html/index.html
+++ b/Html/index.html
@@ -63,7 +63,7 @@
             doloribus, earum quis?
           </p>
           <h4>Image by Freepik</h4>
-          <button class="btn">Learn More</button>
+          <button class="btn">LEARN MORE</button>
         </div>
       </div>
     </div>
@@ -155,8 +155,8 @@
                 quibusdam quam modi maiores animi iusto consequuntur quia saepe
                 vel, esse a?
               </p>
-              <p>Image from freep</p>
-              <button class="btn">Learn More</button>
+              <p>Image from freepik</p>
+              <button class="btn">LEARN MORE</button>
             </div>
           </div>
         </div>
@@ -220,10 +220,10 @@
           amet consectetur adipisicing elit. Quisquam nesciunt nam numquam
           deleniti?
         </p>
-        <button class="btn">LEARN MORE</button>
+        <button class="btn" style="margin-left: 0.5rem">LEARN MORE</button>
       </div>
-      <img class="img1" src="../Images/decorating1.jpg" alt="chair" />
-      <img class="img2" src="../Images/decorating2.jpg" alt="chair" />
+      <img class="image1" src="../Images/decorating1.jpg" alt="chair" />
+      <img class="image2" src="../Images/decorating2.jpg" alt="chair" />
       <!-- <img class="img3" src="../Images/decorating3.jpg" alt="" /> -->
       <!-- <img class="img4" src="../Images/di3.jpg" alt="" /> -->
     </div>
