--- a/Html/index.html
+++ b/Html/index.html
@@ -229,14 +229,9 @@
     </div>
     <div class="img6">
       <div class="outer">
-        <div class="first1">
-          <img src="../Images/vibrant1.webp" alt="" />
-          <div class="sanika"></div>
-        </div>
-
-        <div class="white">
-          <div class="whitei"></div>
-        </div>
+        <img src="../Images/vibrant1.webp" alt="">
+        <div class="white"></div>
+        <div class="info"></div>
       </div>
     </div>
     <div class="img7"></div>
