--- a/Html/index.html
+++ b/Html/index.html
@@ -222,14 +222,19 @@
         </p>
         <button class="btn" style="margin-left: 0.5rem">LEARN MORE</button>
       </div>
-      <img class="image1" src="../Images/decorating1.jpg" alt="chair" />
-      <img class="image2" src="../Images/decorating2.jpg" alt="chair" />
+      <div class="image1" style="display: contents">
+        <img src="../Images/decorating1.jpg" alt="chair" />
+      </div>
+      <div class="image2">
+        <img src="../Images/decorating2.jpg" alt="chair" />
+      </div>
+
       <!-- <img class="img3" src="../Images/decorating3.jpg" alt="" /> -->
       <!-- <img class="img4" src="../Images/di3.jpg" alt="" /> -->
     </div>
     <div class="img6">
       <div class="outer">
-        <img src="../Images/vibrant1.webp" alt="">
+        <img src="../Images/vibrant1.webp" alt="" />
         <div class="white"></div>
         <div class="info"></div>
       </div>
