--- a/Html/index.html
+++ b/Html/index.html
@@ -236,7 +236,12 @@
       <div class="outer">
         <img src="../Images/vibrant1.webp" alt="" />
         <div class="white"></div>
-        <div class="info"></div>
+        <div class="info">
+          <h1>Vibrant<br> Patterns</h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium saepe, sapiente aliquid minima asperiores cum totam blanditiis nostrum delectus pariatur dolores quod, ad dolor a porro fugiat commodi illo sit Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore corporis reiciendis impedit velit sunt Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam quibusdam, animi temporibus at deleniti, quisquam a iur</p>
+          
+          <button class="btn">Learn More</button>
+        </div>
       </div>
     </div>
     <div class="img7"></div>
