--- a/Html/index.html
+++ b/Html/index.html
@@ -222,24 +222,46 @@
         </p>
         <button class="btn" style="margin-left: 0.5rem">LEARN MORE</button>
       </div>
-      <div class="image1" style="display: contents">
+      <div class="image1">
         <img src="../Images/decorating1.jpg" alt="chair" />
       </div>
       <div class="image2">
-        <img src="../Images/decorating2.jpg" alt="chair" />
+        <img src="../Images/decorating2.jpg" alt="sofa" />
       </div>
-
-      <!-- <img class="img3" src="../Images/decorating3.jpg" alt="" /> -->
-      <!-- <img class="img4" src="../Images/di3.jpg" alt="" /> -->
+      <div class="image3">
+        <img src="../Images/decorating3.jpg" alt="sofa" />
+      </div>
+      <div class="image4">
+        <img class="img4" src="../Images/di3.jpg" alt="women" />
+      </div>
+      <div class="leftbox">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui commodi
+          quo sed eius, nesciunt iste beatae recusandae corporis illum corrupti
+          nostrum dolorum maiores, minus modi tempore, necessitatibus doloremque
+          accusamus sapiente.
+        </p>
+      </div>
     </div>
     <div class="img6">
       <div class="outer">
         <img src="../Images/vibrant1.webp" alt="" />
         <div class="white"></div>
         <div class="info">
-          <h1>Vibrant<br> Patterns</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium saepe, sapiente aliquid minima asperiores cum totam blanditiis nostrum delectus pariatur dolores quod, ad dolor a porro fugiat commodi illo sit Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore corporis reiciendis impedit velit sunt Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam quibusdam, animi temporibus at deleniti, quisquam a iur</p>
-          
+          <h1>
+            Vibrant<br />
+            Patterns
+          </h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium
+            saepe, sapiente aliquid minima asperiores cum totam blanditiis
+            nostrum delectus pariatur dolores quod, ad dolor a porro fugiat
+            commodi illo sit Lorem ipsum dolor, sit amet consectetur adipisicing
+            elit. Tempore corporis reiciendis impedit velit sunt Lorem ipsum
+            dolor sit, amet consectetur adipisicing elit. Nam quibusdam, animi
+            temporibus at deleniti, quisquam a iur
+          </p>
+
           <button class="btn">Learn More</button>
         </div>
       </div>
