--- a/Html/index.html
+++ b/Html/index.html
@@ -266,7 +266,25 @@
         </div>
       </div>
     </div>
-    <div class="img7"></div>
+    <div class="img7">
+      <div class="imag1">
+        <img src="../Images/cozy1.jpg" alt="">
+      </div>
+      <div class="imag2">
+        <img src="../Images/cozy2.jpg" alt="">
+      </div>
+      <div class="cozy">
+        <h1>Cozy Kitchen</h1>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse quae fugit obcaecati illo iure eaque autem, dolor fuga enim aperiam explicabo aliquam temporibus facere at, earum ipsa reprehenderit doloremque inventore!<br><br>Images by Freepik</p>
+        <button class="btn">Learn More</button>
+      </div>
+      <div class="imag3">
+        <img src="../Images/cozy3.jpg" alt="">
+      </div>
+      <div class="imag4">
+        <img src="../Images/cozy4.jpg" alt="">
+      </div>
+    </div>
     <div class="img8"></div>
     <div class="footer"></div>
     <script
