--- a/Html/index.html
+++ b/Html/index.html
@@ -268,25 +268,61 @@
     </div>
     <div class="img7">
       <div class="imag1">
-        <img src="../Images/cozy1.jpg" alt="">
+        <img src="../Images/cozy1.jpg" alt="" />
       </div>
       <div class="imag2">
-        <img src="../Images/cozy2.jpg" alt="">
+        <img src="../Images/cozy2.jpg" alt="" />
       </div>
       <div class="cozy">
         <h1>Cozy Kitchen</h1>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse quae fugit obcaecati illo iure eaque autem, dolor fuga enim aperiam explicabo aliquam temporibus facere at, earum ipsa reprehenderit doloremque inventore!<br><br>Images by Freepik</p>
-        <button class="btn">Learn More</button>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse quae
+          fugit obcaecati illo iure eaque autem, dolor fuga enim aperiam
+          explicabo aliquam temporibus facere at, earum ipsa reprehenderit
+          doloremque inventore!<br /><br />Images by Freepik
+        </p>
+        <button class="btn">LEARN MORE</button>
       </div>
       <div class="imag3">
-        <img src="../Images/cozy3.jpg" alt="">
+        <img src="../Images/cozy3.jpg" alt="" />
       </div>
       <div class="imag4">
-        <img src="../Images/cozy4.jpg" alt="">
+        <img src="../Images/cozy4.jpg" alt="" />
       </div>
     </div>
-    <div class="img8"></div>
-    <div class="footer"></div>
+    <div class="img8">
+      <div class="logos row">
+        <div class="logos1 col-md-6">hii</div>
+        <div class="logos1 col-md-6">bhjhg</div>
+        <div class="logos1 col-md-6">jhl</div>
+        <div class="logos1 col-md-6">jh</div>
+      </div>
+      <div class="contactus">
+        <form class="form">
+          <h1>Contact Us</h1>
+          <input
+            class="name"
+            type="text"
+            placeholder="  Enter your Name"
+          /><br />
+          <input
+            class="email"
+            type="text"
+            placeholder="  Enter a valid email address"
+          />
+          <br />
+          <input class="blank" type="text" /> <br />
+          <button class="submit">Submit</button>
+        </form>
+      </div>
+    </div>
+    <div class="footer">
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit, est.
+        Libero voluptates ab officia ut cum, commodi, consectetur voluptatem
+        fugiat, reprehenderit ad quasi mollitia nobis quam cumque quia
+      </p>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
