--- a/Html/index.html
+++ b/Html/index.html
@@ -10,12 +10,12 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="../Html/style.css" />
-    <title>Document</title>
+    <title>Furnit</title>
   </head>
   <body>
     <div class="header">
-      <nav class="navbar sticky-top navbar-expand-lg navbar-dark first">
-        <a class="navbar-brand" href="#">LOGO</a>
+      <nav class="navbar sticky-top navbar-expand-lg  first">
+        <a class="navbar-brand" href="#"><img src="../Images/logo.png" alt="logo"></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -84,7 +84,7 @@
             </svg>
           </div>
         </div>
-        <h4 class="display-5">Residential</h4>
+        <h4 class="display-5 ">Residential</h4>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum ab unde
           a sed, optio atque id veniam doloremque reiciendis odit mollitia
