--- a/Html/index.html
+++ b/Html/index.html
@@ -222,7 +222,7 @@
           amet consectetur adipisicing elit. Quisquam nesciunt nam numquam
           deleniti?
         </p>
-        <button class="btn" style="margin-left: 0.5rem">LEARN MORE</button>
+        <button class="btn-1" style="margin-left: 0.5rem">LEARN MORE</button>
       </div>
       <div class="image1">
         <img src="../Images/decorating1.jpg" alt="chair" />
