--- a/Html/index.html
+++ b/Html/index.html
@@ -318,7 +318,8 @@
             />
           </svg>
           <h3>PHONE NUMBER</h3>
-          <p>234-9036-5400 888-0123-4567(toll free)</p>
+          <p>234-9036-5400 , 888-0123-4567 <br>
+            (toll free)</p>
         </div>
         <div class="logos1 col-md-6">
           <svg
