--- a/Interior/index.html
+++ b/Interior/index.html
@@ -9,7 +9,7 @@
       integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../Html/style.css" />
+    <link rel="stylesheet" href="../In/style.css" />
     <title>Furnit</title>
   </head>
   <body>
