--- a/Interior/index.html
+++ b/Interior/index.html
@@ -9,13 +9,13 @@
       integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../In/style.css" />
+    <link rel="stylesheet" href="../Interior/style.css" />
     <title>Furnit</title>
   </head>
   <body>
     <div class="header">
       <nav class="navbar sticky-top navbar-expand-lg  first">
-        <a class="navbar-brand" href="#"><img src="../Images/logo.png" alt="logo"></a>
+        <a class="navbar-brand" href="#"><img src="../Interior/Images/logo.png" alt="logo"></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -225,16 +225,16 @@
         <button class="btn-1" style="margin-left: 0.5rem">LEARN MORE</button>
       </div>
       <div class="image1">
-        <img src="../Images/decorating1.jpg" alt="chair" />
+        <img src="../Interior/Images/decorating1.jpg" alt="chair" />
       </div>
       <div class="image2">
-        <img src="../Images/decorating2.jpg" alt="sofa" />
+        <img src="../Interior/Images/decorating2.jpg" alt="sofa" />
       </div>
       <div class="image3">
-        <img src="../Images/decorating3.jpg" alt="sofa" />
+        <img src="../Interior/Images/decorating3.jpg" alt="sofa" />
       </div>
       <div class="image4">
-        <img class="img4" src="../Images/di3.jpg" alt="women" />
+        <img class="img4" src="../Interior/Images/di3.jpg" alt="women" />
       </div>
       <div class="leftbox">
         <p>
@@ -247,7 +247,7 @@
     </div>
     <div class="img6">
       <div class="outer">
-        <img src="../Images/vibrant1.webp" alt="" />
+        <img src="../Interior/Images/vibrant1.webp" alt="" />
         <div class="white"></div>
         <div class="info">
           <h1>
@@ -270,10 +270,10 @@
     </div>
     <div class="img7">
       <div class="imag1">
-        <img src="../Images/cozy1.jpg" alt="" />
+        <img src="../Interior/Images/cozy1.jpg" alt="" />
       </div>
       <div class="imag2">
-        <img src="../Images/cozy2.jpg" alt="" />
+        <img src="../Interior/Images/cozy2.jpg" alt="" />
       </div>
       <div class="cozy">
         <h1>Cozy Kitchen</h1>
@@ -286,10 +286,10 @@
         <button class="btn-1" style="margin-left: 3.5em;">LEARN MORE</button>
       </div>
       <div class="imag3">
-        <img src="../Images/cozy3.jpg" alt="" />
+        <img src="../Interior/Images/cozy3.jpg" alt="" />
       </div>
       <div class="imag4">
-        <img src="../Images/cozy4.jpg" alt="" />
+        <img src="../Interior/Images/cozy4.jpg" alt="" />
       </div>
     </div>
     <div class="img8">
